# ReadAndCalculateCsvTask

./: CMakeLists.txt  README.txt  open_csv_and_calculate.cpp
csv_files/: input10.csv  input11.csv  input12.csv  input13.csv  input16.csv  input2.csv  input3.csv  input4.csv  input5.csv  input6.csv  input7.csv  input9.csv
csv_files/CalculateTable/correct_calculate/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv
csv_files/CalculateTable/division_by_zero/: 1.csv  2.csv
csv_files/CalculateTable/incorrect_table/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  2.csv  3.csv  4.csv  5.csv  7.csv  8.csv  9.csv
csv_files/CalculateTable/looping_of_formulas/: 1.csv  2.csv
csv_files/CalculateTable/reference_to_a_non_existent_cell/: 2.csv  3.csv
include/: calculate_csv.h
src/: calculate_csv.cpp  main.cpp  open_csv_and_calculate.cpp  tests.cpp
